fix a z-index issue with the skip-to-content

--- a/src/_scss/chunks/_skip-to-content.scss
+++ b/src/_scss/chunks/_skip-to-content.scss
@@ -12,6 +12,7 @@
     padding-block-start: 1em;
     padding-block-end: 1.5em;
     padding-inline: var(--site-padding);
+    z-index: 1;
     
     @include media.widerThan(caramel) {
         display: flex;
